--- a/Docs.Web/wwwroot/index.html
+++ b/Docs.Web/wwwroot/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Docs.Web</title>
+    <title>Shift Framework Docs</title>
     <base href="/" />
-    <link rel="stylesheet" href="css/app.css" />
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="Docs.Web.styles.css" rel="stylesheet" /> -->
+    <link href="css/app.css" rel="stylesheet" />
+
+    <link href="_content/ShiftSoftware.ShiftBlazor/main.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -25,7 +27,10 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
+    
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/ShiftSoftware.ShiftBlazor/main.js"></script>
 </body>
 
 </html>
