--- a/Docs.Web/wwwroot/index.html
+++ b/Docs.Web/wwwroot/index.html
@@ -11,6 +11,9 @@
     <link href="_content/ShiftSoftware.ShiftBlazor/main.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="libraries/prism.css" rel="stylesheet" />
+    <script src="libraries/prism.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
